# electronics

./: .gitignore  README.md  irrigation_wiring.txt  led_controller-drc.rpt  led_controller-erc.rpt
firmware/: CMakeLists.txt  rp2040_registers.docx
firmware/8ZoneTriac/: .cproject  .mxproject  Controller.ioc
firmware/8ZoneTriac/Core/Inc/: stm32f0xx_hal_conf.h  stm32f0xx_it.h
firmware/8ZoneTriac/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c
firmware/bluetooth_test/: client.py  server.py
firmware/common/communication/: buffer.cc  buffer.h  message.cc  message.h  protocol.h  serial.cc  serial.h  tty.cc  tty.h
firmware/common/memory/: memory.cc  memory.h
firmware/common/pio/: 74hc595.pio
firmware/common/rtc/: ds1307.cc  ds1307.h
firmware/common/storage/: flash_pico.cc  flash_pico.h  flash_w25q128.cc  flash_w25q128.h
firmware/common/utils/: ascii.cc  ascii.h  bcd.cc  bcd.h  core_sync.cc  core_sync.h  crc16.cc  crc16.h  debug.cc  debug.h  i2c_util.cc  i2c_util.h  intercore_queue.cc  intercore_queue.h  io.h  linked_list.h
firmware/fish_feeder/: fish_feeder.ino  main.py  stepper.py
firmware/garage_monitor/: config.py  garage_monitor.code-workspace  main.py  mmwave_sensor.py
firmware/iw_8_controller/: CMakeLists.txt  cmd.cc  cmd.h  controller_init.cc  controller_init.h  flows.cc  flows.h  iw_8_controller.cc  messaging.cc  messaging.h  pins.h  state.cc  state.h
firmware/memory_management_testing/: CMakeLists.txt  memory_management_testing.cc
firmware/mmwave_sensor/: config.py  main.py  mmwave_sensor.code-workspace
firmware/reflow_controller/: average.cpp  average.h  config.cpp  config.h  lcd.cpp  lcd.h  learn.cpp  learn.h  pid.cpp  pid.h  pins.h  plot.cpp  plot.h  reflow.cpp  reflow.h  reflow_controller.ino  stage.cpp  stage.h  temp_sensor.cpp  temp_sensor.h  temperature.cpp  temperature.h  ui.cpp  ui.h
firmware/simple_controller/: config.py  main.py  mmwave_sensor.py  wlan.py
firmware/uart_testing/: CMakeLists.txt  uart_testing.cc
firmware/wall_sensor/: Neopixel.py  WlanHelper.py  config.py  i2c.py  main.py  wall_sensor.code-workspace
hardware/: RPI_Inverted.dxf  RPI_Normal.dxf  pcb-checklist.xlsx
hardware/8ZoneTriac/: 8ZoneTriac.kicad_pcb  8ZoneTriac.kicad_pro  8ZoneTriac.kicad_sch  8ZoneTriac_Inputs.kicad_sch  8ZoneTriac_Outputs.kicad_sch
hardware/PiDaughterBoard/: PiDaugherBoardIO.sch  PiDaugherBoardInputsAndComms.kicad_sch  PiDaugherBoardInputsAndComms.sch  PiDaughterBoard-cache.lib  PiDaughterBoard-rescue.lib  PiDaughterBoard.kicad_pcb  PiDaughterBoard.kicad_pro  PiDaughterBoard.kicad_sch  PiDaughterBoard.net  PiDaughterBoard.pro  PiDaughterBoard.sch  PiDaughterBoard.xml  PiDaughterBoardOutputsAndLEDs.kicad_sch  PiDaughterBoardOutputsAndLEDs.sch  sym-lib-table
hardware/basic_controller/: basic_controller.kicad_pcb  basic_controller.kicad_pro  basic_controller.kicad_sch  cpu.kicad_sch  fp-lib-table  sym-lib-table
hardware/controller/: outputs.kicad_sch  power.kicad_sch  sym-lib-table
hardware/fusion360_modules/: PlotToSketch.py
hardware/iw-8-controller/: cpu.kicad_sch  fp-lib-table  inputs.kicad_sch  iw-8-controller.kicad_pro  iw-8-controller.kicad_sch  outputs.kicad_sch  power.kicad_sch  sym-lib-table
hardware/iw-8-expansion/: iw-8-expansion.kicad_pcb  iw-8-expansion.kicad_pro  iw-8-expansion.kicad_sch  outputs.kicad_sch  power.kicad_sch  sym-lib-table
hardware/kicad/: ESP32_board.md  README.md
hardware/kicad_modules/: bom_csv_jlcpcb.py  center_items.py  pcb_edge.py
hardware/kicad_symbols/: 74LVC1G00.kicad_sym  ImpressionWorks.kicad_sym  MCU_RaspberryPi_and_Boards.kicad_sym  Mekatrol.kicad_sym  stwd100-power_management.lib
hardware/led_controller/: _autosave-led_controller.kicad_pcb  fp-lib-table  led_controller.kicad_pcb  led_controller.kicad_pro  sym-lib-table  (+1 more)
(+156 files in other folders)
